Add main page content using js

--- a/src/index.html
+++ b/src/index.html
@@ -10,31 +10,7 @@
       <nav>Home</nav>
       <nav>Training</nav>
       <nav>Contact</nav>
-      <div id="content">
-        <h1>Welcome to MMA Gym</h1>
-        <h3>
-          Where Warriors Are Forged: Unleash Your Inner Strength at MMA Gym!
-        </h3>
-        <h5>Locations</h5>
-        <div class="location">
-          <div id="location1">
-            <h2>Rising Sun MMA</h2>
-            <p>
-              Boasting state-of-the-art training facilities, including a
-              spacious mat area, top-of-the-line equipment, and dedicated
-              weightlifting zones.
-            </p>
-          </div>
-          <div id="location2">
-            <h2>Thunderbolt Fight Club:</h2>
-            <p>
-              Equipped with a rugged yet functional training environment,
-              featuring heavy bags, sparring rings, and strength training
-              apparatus.
-            </p>
-          </div>
-        </div>
-      </div>
+      <div id="content"></div>
     </header>
   </body>
 </html>
