Add styling to home page

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,13 @@
   </head>
   <body>
     <header>
-      <nav>Home</nav>
-      <nav>Training</nav>
-      <nav>Contact</nav>
-      <div id="content"></div>
+      <h2>MMA Gym</h2>
+      <div class="items">
+        <nav>Home</nav>
+        <nav>Training</nav>
+        <nav>Contact</nav>
+      </div>
     </header>
+    <div id="content"></div>
   </body>
 </html>
