Add logic to switch pages

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <header>
       <h2>MMA Gym</h2>
       <div class="items">
-        <nav>Home</nav>
-        <nav>Training</nav>
-        <nav>Contact</nav>
+        <nav id ="home">Home</nav>
+        <nav id="training">Training</nav>
+        <nav id="about">About</nav>
       </div>
     </header>
     <div id="content"></div>
